@@ -2060,8 +2060,12 @@ sub buildAutotoolsProject($@)
     chdir ".." or die;
 
     if ($project eq 'WebKit' && !isCrossCompilation()) {
-        my @docGenerationOptions = ($runWithJhbuild, "$sourceDir/Tools/gtk/generate-gtkdoc", "--skip-html");
+        my @docGenerationOptions = ("$sourceDir/Tools/gtk/generate-gtkdoc", "--skip-html");
         push(@docGenerationOptions, productDir());
+
+        if ($runWithJhbuild) {
+            unshift(@docGenerationOptions, $runWithJhbuild);
+        }
 
         if (system(@docGenerationOptions)) {
             die "\n gtkdoc did not build without warnings\n";
